# AppGen_Studio

./: .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt  setup_mlflow.sh
backend/app/: main.py  server.py
backend/app/agents/: chat_modification_agent.py  frontend_generator_agent.py
backend/app/api/: chat_routes.py  evaluation_routes.py  pdf_routes.py  routes.py
backend/app/config/: mlflow_config.py  settings.py
backend/app/core/: AzureGithubLLM.py  ClaudeLLM.py  OpenaiLLM.py
backend/app/evaluation/: README.md  simple_evaluator.py
backend/app/models/: schemas.py
backend/app/prompts/: library.txt  planifier.txt
backend/app/services/: chat_service.py  generator.py  pdf_service.py
backend/app/test/: test_evaluator.py
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  react_project.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.js
frontend/src/components/: ReactCodePreview.js
frontend/src/components/Features/: ChatInterface.js  GeneratorSection.js  ManagementSection.js  PreviewSection.js  ProjectContainer.js  index.js
frontend/src/components/UI/: Alert.js  AlertContainer.js  (+10 more)
frontend/src/contexts/: TranslationContext.js
frontend/src/hooks/: index.js  useAlerts.js  useFileHandler.js  useFileUpload.js  useNavigation.js  usePersistentState.js  useProject.js  useProjectChat.js  useProjectGenerator.js
frontend/src/utils/: chatUtils.js  index.js  zipExport.js
mlflow/: Dockerfile
